Projekt 8 - Mapa przeglądowa Szwecji/GpMessages/252795935562800
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: sobota, 8 czerwca 2024 15:32:48</msg><msg code="539" type="100">ERROR 000539:   File "&lt;expression&gt;", line 1
    Scandinavian Mountains
                 ^
SyntaxError: unexpected EOF while parsing
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at sobota, 8 czerwca 2024 15:32:48 (Elapsed Time: 0,34 seconds)</msg></messages>